--- a/ember/app/templates/components/flight-leg-panel.hbs
+++ b/ember/app/templates/components/flight-leg-panel.hbs
@@ -1,5 +1,5 @@
 <h4>{{t "distance"}}</h4>
-{{flight-leg-table legs=legs.classic selection=selection onSelect=onSelect}}
+{{flight-leg-table legs=@legs.classic selection=@selection onSelect=@onSelect}}
 
 <h4>{{t "triangle"}}</h4>
-{{flight-leg-table legs=legs.triangle selection=selection onSelect=onSelect}}
+{{flight-leg-table legs=@legs.triangle selection=@selection onSelect=@onSelect}}
