follower-list: Convert to template-only component

--- a/ember/app/templates/components/follower-list.hbs
+++ b/ember/app/templates/components/follower-list.hbs
@@ -1,5 +1,5 @@
 <ul class="row list-unstyled">
-  {{#each followers as |follower|}}
+  {{#each @followers as |follower|}}
     <li class="col-md-3 col-sm-4 col-xs-6">
       {{follower-panel follower=follower}}
     </li>
