--- a/ember/app/templates/components/user-page.hbs
+++ b/ember/app/templates/components/user-page.hbs
@@ -1,29 +1,29 @@
 {{#base-page}}
   <div class="page-header">
-    <h1>{{user.name}}</h1>
+    <h1>{{@user.name}}</h1>
   </div>
 
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      {{user-details user=user}}
+      {{user-details user=@user}}
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-6 col-md-4 col-md-offset-2">
-      {{user-distance-flights flights=user.distanceFlights}}
+      {{user-distance-flights flights=@user.distanceFlights}}
     </div>
 
     <div class="col-sm-6 col-md-4">
-      {{user-quick-stats stats=user.stats}}
+      {{user-quick-stats stats=@user.stats}}
     </div>
   </div>
 
-  {{#if user.takeoffLocations}}
+  {{#if @user.takeoffLocations}}
     <div class="row">
       <div class="col-md-12">
         <h2>{{t "takeoff-locations"}}</h2>
-        {{takeoffs-map locations=user.takeoffLocations height="533px"}}
+        {{takeoffs-map locations=@user.takeoffLocations height="533px"}}
       </div>
     </div>
   {{/if}}
