--- a/ember/app/templates/components/validated-block.hbs
+++ b/ember/app/templates/components/validated-block.hbs
@@ -1,4 +1,4 @@
-<label class="control-label">{{label}}</label>
+{{#if label}}<label class="control-label">{{label}}</label>{{/if}}
 {{yield}}
 
 {{#if showMessage}}
