--- a/ember/app/templates/components/comments-list.hbs
+++ b/ember/app/templates/components/comments-list.hbs
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table" style="table-layout:fixed; word-wrap:break-word;">
   <tbody>
     {{#each comments as |comment|}}
       <tr>
