--- a/ember/app/templates/components/flight-page.hbs
+++ b/ember/app/templates/components/flight-page.hbs
@@ -39,7 +39,7 @@
   <!-- Tab panes -->
   <div class="sidebar-content">
     <div class="sidebar-pane" id="tab-overview">
-      <h3>{{t "overview"}}{{share-button}}</h3>
+      <h3>{{t "overview"}}</h3>
       <div class="sidebar-pane-content">
         {{flight-details-table flight=flight transitionTo=transitionTo}}
       </div>
