tracking-page: Replace  with ember-concurrency loop

--- a/ember/app/templates/components/tracking-page.hbs
+++ b/ember/app/templates/components/tracking-page.hbs
@@ -1,4 +1,4 @@
-<div class="relative-fullscreen" ...attributes {{didInsert this.setup}} {{willDestroy this.teardown}}>
+<div class="relative-fullscreen" ...attributes {{didInsert this.setup}}>
   {{#if flights}}
     <div id="sidebar" class="sidebar collapsed">
       <!-- Nav tabs -->
