base-map: Replace  override with splattribute

--- a/ember/app/styles/bootstrap/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/bootstrap/_bootstrap-theme-skylines.scss
@@ -41,8 +41,12 @@ abbr[title] {
   }
 }
 
+.relative,
 .relative-fullscreen {
   position: relative;
+}
+
+.relative-fullscreen {
   width: 100%;
   height: 100%;
 }
