--- a/ember/app/templates/components/flight-map.hbs
+++ b/ember/app/templates/components/flight-map.hbs
@@ -1,4 +1,4 @@
-<div style={{this.style}} ...attributes {{setMapTarget this.map}}>
+<div class="relative-fullscreen" ...attributes {{setMapTarget this.map}}>
   <LayerSwitcher @map={{map}} />
 
   {{#if flights}}
