--- a/ember/app/templates/components/takeoffs-map.hbs
+++ b/ember/app/templates/components/takeoffs-map.hbs
@@ -1,4 +1,4 @@
-<div style={{this.style}} ...attributes {{setMapTarget this.map}}>
+<div class="relative" ...attributes {{setMapTarget this.map}}>
   <LayerSwitcher @map={{map}} />
   <TakeoffsLayer @map={{map}} @locations={{locations}} />
 </div>
