--- a/ember/app/templates/components/user-page.hbs
+++ b/ember/app/templates/components/user-page.hbs
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2>{{t "takeoff-locations"}}</h2>
-        <TakeoffsMap @locations={{@user.takeoffLocations}} @height="533px" />
+        <TakeoffsMap @locations={{@user.takeoffLocations}} style="height: 533px" />
       </div>
     </div>
   {{/if}}
