--- a/ember/app/templates/components/base-map.hbs
+++ b/ember/app/templates/components/base-map.hbs
@@ -1,3 +1,3 @@
-<div style={{this.style}} ...attributes {{setMapTarget this.map}}>
+<div ...attributes {{setMapTarget this.map}}>
   <LayerSwitcher @map={{map}} />
 </div>
