template-lint: Enable  rule

--- a/ember/app/templates/components/aircraft-model-select.hbs
+++ b/ember/app/templates/components/aircraft-model-select.hbs
@@ -5,7 +5,7 @@
   @onchange={{action "onChange"}}
 as |model|>
   {{#if (eq model.id null)}}
-    [{{t 'unspecified'}}]
+    [{{t "unspecified"}}]
   {{else}}
     {{model.name}}
   {{/if}}
