--- a/ember/app/templates/components/pin-button.hbs
+++ b/ember/app/templates/components/pin-button.hbs
@@ -1,7 +1,7 @@
 <BsButton @onClick={{action "toggle"}}>
   {{#if pinned}}
-    {{fa-icon "star" size="lg"}} {{t 'flight-pinned'}}
+    {{fa-icon "star" size="lg"}} {{t "flight-pinned"}}
   {{else}}
-    {{fa-icon "star-o" size="lg"}} {{t 'flight-unpinned'}}
+    {{fa-icon "star-o" size="lg"}} {{t "flight-unpinned"}}
   {{/if}}
 </BsButton>
