--- a/ember/app/templates/components/settings-panels/tracking-key.hbs
+++ b/ember/app/templates/components/settings-panels/tracking-key.hbs
@@ -9,16 +9,16 @@
     {{#if error}}
       <BsAlert @type="danger" @dismissible={{false}}>{{error}}</BsAlert>
     {{/if}}
-  
+
     <p style="margin: 10px 0px 20px;">
-      {{t 'your-live-tracking-key'}} <span class="label tracking-key">{{key}}</span>
+      {{t "your-live-tracking-key"}} <span class="label tracking-key">{{key}}</span>
     </p>
-  
+
     <form {{action (perform saveTask) on="submit"}}>
       <button class="btn btn-primary btn-block" type="submit" disabled={{saveTask.isRunning}}>
         {{t (if saveTask.isRunning "generating-new-key" "generate-new-key")}}
       </button>
     </form>
   </div>
-  
+
 </div>
