--- a/ember/app/templates/components/circling-performance-table.hbs
+++ b/ember/app/templates/components/circling-performance-table.hbs
@@ -3,8 +3,8 @@
     <tbody>
     <tr>
       <th></th>
-      <th class='numeric'>{{t "count"}}<br/>{{t "avg-vario-abbr"}}</th>
-      <th class='numeric'>{{t "duration"}}<br/>&Delta;H</th>
+      <th class="numeric">{{t "count"}}<br/>{{t "avg-vario-abbr"}}</th>
+      <th class="numeric">{{t "duration"}}<br/>&Delta;H</th>
     </tr>
     {{#if total}}<CirclingPerformanceRow @perf={{total}} />{{/if}}
     {{#if left}}<CirclingPerformanceRow @perf={{left}} />{{/if}}
@@ -12,5 +12,5 @@
     {{#if mixed}}<CirclingPerformanceRow @perf={{mixed}} />{{/if}}
     </tbody>
   </table>
-  
+
 </div>
