--- a/ember/app/templates/components/flight-leg-table.hbs
+++ b/ember/app/templates/components/flight-leg-table.hbs
@@ -3,12 +3,12 @@
     <thead>
     <tr class="small">
       <th></th>
-      <th class='numeric'>{{t "distance-abbr"}}</th>
-      <th class='numeric hidden-md'><abbr title={{t "duration"}}>&Delta;t</abbr></th>
-      <th class='numeric'>{{t "avg-speed-abbr"}}</th>
-      <th class='numeric'>{{t "climb-percentage-abbr"}}</th>
-      <th class='numeric'>{{t "avg-vario-abbr"}}</th>
-      <th class='numeric'><abbr title={{t "glide-rate"}}>{{t "glide-rate-abbr"}}</abbr></th>
+      <th class="numeric">{{t "distance-abbr"}}</th>
+      <th class="numeric hidden-md"><abbr title={{t "duration"}}>&Delta;t</abbr></th>
+      <th class="numeric">{{t "avg-speed-abbr"}}</th>
+      <th class="numeric">{{t "climb-percentage-abbr"}}</th>
+      <th class="numeric">{{t "avg-vario-abbr"}}</th>
+      <th class="numeric"><abbr title={{t "glide-rate"}}>{{t "glide-rate-abbr"}}</abbr></th>
     </tr>
     </thead>
     <tbody>
