--- a/ember/app/templates/components/flight-phase-table.hbs
+++ b/ember/app/templates/components/flight-phase-table.hbs
@@ -4,12 +4,12 @@
       <tr>
         <th></th>
         <th>{{t "start"}}</th>
-        <th class='hidden-md'>{{t "duration"}}</th>
-        <th class='numeric'>&Delta;H<br />[{{units.altitudeUnit}}]</th>
-        <th class='numeric'>{{t "distance-abbr"}}<br />[{{units.distanceUnit}}]</th>
-        <th class='numeric'>{{t "avg-vario-abbr"}}<br />[{{units.liftUnit}}]</th>
-        <th class='numeric'>{{t "avg-speed-abbr"}}<br />[{{units.speedUnit}}]</th>
-        <th class='numeric'><abbr title={{t "glide-rate"}}>{{t "glide-rate-abbr"}}</abbr></th>
+        <th class="hidden-md">{{t "duration"}}</th>
+        <th class="numeric">&Delta;H<br />[{{units.altitudeUnit}}]</th>
+        <th class="numeric">{{t "distance-abbr"}}<br />[{{units.distanceUnit}}]</th>
+        <th class="numeric">{{t "avg-vario-abbr"}}<br />[{{units.liftUnit}}]</th>
+        <th class="numeric">{{t "avg-speed-abbr"}}<br />[{{units.speedUnit}}]</th>
+        <th class="numeric"><abbr title={{t "glide-rate"}}>{{t "glide-rate-abbr"}}</abbr></th>
       </tr>
     </thead>
     <tbody>
@@ -18,5 +18,5 @@
       {{/each}}
     </tbody>
   </table>
-  
+
 </div>
