--- a/ember/app/templates/components/settings-panels/choose-club.hbs
+++ b/ember/app/templates/components/settings-panels/choose-club.hbs
@@ -11,10 +11,10 @@
       {{else if messageKey}}
         <BsAlert @type="success" @dismissible={{false}}>{{t messageKey}}</BsAlert>
       {{/if}}
-  
+
       <div class="form-group">
         <label class="control-label">{{t "club"}}</label>
-  
+
         <PowerSelect
           @options={{clubsWithNull}}
           @selected={{club}}
@@ -22,13 +22,13 @@
           @onchange={{action (mut club)}}
         as |club|>
           {{#if (eq club.id null)}}
-            [{{t 'no-club'}}]
+            [{{t "no-club"}}]
           {{else}}
             {{club.name}}
           {{/if}}
         </PowerSelect>
       </div>
-  
+
       <button class="btn btn-primary btn-block" type="submit" disabled={{or saveTask.isRunning}}>
         {{t (if saveTask.isRunning "changing" "change")}}
       </button>
