--- a/ember/app/templates/components/wingman-row.hbs
+++ b/ember/app/templates/components/wingman-row.hbs
@@ -11,14 +11,14 @@
     {{else}}
       [{{t "unknown"}}]
     {{/if}}
-  
+
     <small><br />
       {{#if flight.registration}}
         {{flight.registration}}
       {{else if igcFile.registration}}
         {{igcFile.registration}}
       {{/if}}
-  
+
       {{#if flight.competitionId}}
         &ndash; {{flight.competitionId}}
       {{else if igcFile.competitionId}}
@@ -34,9 +34,9 @@
         {{pilotName}}
       {{/if}}
     {{/if}}
-  
+
     {{#if (and pilotName copilotName)}}<br/>{{/if}}
-  
+
     {{#if copilotName}}
       {{#if copilot.id}}
         <LinkTo @route="user" @model={{copilot.id}} @bubbles={{false}}>{{copilotName}}</LinkTo>
@@ -44,22 +44,22 @@
         {{copilotName}}
       {{/if}}
     {{/if}}
-  
+
     {{#if (not (or pilotName copilotName))}}
     [{{t "unspecified"}}]
     {{/if}}
   </td>
   <td class="times-column">
-    {{format-time times.firstObject.start format='hhmmss' timeZone="UTC"}}<br />
-    {{format-time times.lastObject.end format='hhmmss' timeZone="UTC"}}
-  
+    {{format-time times.firstObject.start format="hhmmss" timeZone="UTC"}}<br />
+    {{format-time times.lastObject.end format="hhmmss" timeZone="UTC"}}
+
     <BsPopover @title="Periods" @triggerEvents="hover">
       <table>
         {{#each times as |interval|}}
           <tr>
-            <td style='text-align: right;'>{{format-time interval.start format='hhmmss' timeZone="UTC"}}</td>
+            <td style="text-align: right;">{{format-time interval.start format="hhmmss" timeZone="UTC"}}</td>
             <td>-</td>
-            <td>{{format-time interval.end format='hhmmss' timeZone="UTC"}}</td>
+            <td>{{format-time interval.end format="hhmmss" timeZone="UTC"}}</td>
           </tr>
         {{/each}}
       </table>
