--- a/ember/app/templates/components/flight-page.hbs
+++ b/ember/app/templates/components/flight-page.hbs
@@ -1,6 +1,6 @@
 <div class="relative-fullscreen" ...attributes {{didInsert this.setup}}>
   <div id="sidebar" class="sidebar collapsed">
-    <!-- Nav tabs -->
+    {{! Nav tabs }}
     <ul class="sidebar-tabs" role="tablist">
       <li>
         <a href="#tab-overview" title="{{t "overview"}}" role="tab">
@@ -37,7 +37,7 @@
         </a>
       </li>
     </ul>
-    <!-- Tab panes -->
+    {{! Tab panes }}
     <div class="sidebar-content">
       <div class="sidebar-pane" id="tab-overview">
         <h3>{{t "overview"}}</h3>
