--- a/ember/app/templates/components/cruise-performance-table.hbs
+++ b/ember/app/templates/components/cruise-performance-table.hbs
@@ -21,7 +21,7 @@
     <td>{{format-speed @perf.speed}}</td>
   </tr>
   <tr>
-    <th><abbr title="{{t "glide-rate"}}">{{t "glide-rate-abbr"}}</abbr></th>
+    <th><abbr title={{t "glide-rate"}}>{{t "glide-rate-abbr"}}</abbr></th>
     <td>{{format-number @perf.glideRate  maximumFractionDigits=1}}</td>
   </tr>
   <tr>
