--- a/ember/app/templates/components/flight-page.hbs
+++ b/ember/app/templates/components/flight-page.hbs
@@ -3,36 +3,36 @@
     {{! Nav tabs }}
     <ul class="sidebar-tabs" role="tablist">
       <li>
-        <a href="#tab-overview" title="{{t "overview"}}" role="tab">
+        <a href="#tab-overview" title={{t "overview"}} role="tab">
           {{fa-icon "info" size="lg"}}
         </a>
       </li>
       <li>
-        <a href="#tab-comments" title="{{t "comments"}}" role="tab">
+        <a href="#tab-comments" title={{t "comments"}} role="tab">
           {{fa-icon "comments-o" size="lg"}}
         </a>
       </li>
       <li>
-        <a href="#tab-stats-total" title="{{t "total"}}" role="tab">
+        <a href="#tab-stats-total" title={{t "total"}} role="tab">
           {{fa-icon "bar-chart" size="lg"}}
         </a>
       </li>
       <li>
-        <a href="#tab-stats-legs" title="{{t "leg-statistics"}}" role="tab">
+        <a href="#tab-stats-legs" title={{t "leg-statistics"}} role="tab">
           {{fa-icon "arrows-h" size="lg"}}
         </a>
       </li>
 
       {{#if phases}}
         <li>
-          <a href="#tab-stats-phases" title="{{t "phase-statistics"}}" role="tab">
+          <a href="#tab-stats-phases" title={{t "phase-statistics"}} role="tab">
             {{fa-icon "step-forward" size="lg"}}
           </a>
         </li>
       {{/if}}
 
       <li>
-        <a href="#tab-wingmen" title="{{t "wingmen"}}" role="tab">
+        <a href="#tab-wingmen" title={{t "wingmen"}} role="tab">
           {{fa-icon "group" size="lg"}}
         </a>
       </li>
