--- a/ember/app/templates/components/tracking-page.hbs
+++ b/ember/app/templates/components/tracking-page.hbs
@@ -4,7 +4,7 @@
       {{! Nav tabs }}
       <ul class="sidebar-tabs" role="tablist">
         <li>
-          <a href="#tab-overview" title="{{t "overview"}}" role="tab">
+          <a href="#tab-overview" title={{t "overview"}} role="tab">
             {{fa-icon "info" size="lg"}}
           </a>
         </li>
