template-lint: Enable  rule

--- a/ember/app/templates/components/flight-details-table.hbs
+++ b/ember/app/templates/components/flight-details-table.hbs
@@ -1,7 +1,7 @@
 <div ...attributes>
   <table class="table table-flight-details">
     <tbody>
-  
+
     <tr>
       <th>{{t "pilot"}}</th>
       <td data-test-pilot-names>
@@ -10,34 +10,34 @@
             {{fa-icon "pencil"}} {{t "change"}}
           </LinkTo>
         {{/if}}
-  
+
         {{#if flight.pilot.id}}
           <LinkTo @route="user" @model={{flight.pilot.id}}>{{pilotName}}</LinkTo>
         {{else if pilotName}}
           {{pilotName}}
         {{/if}}
-  
+
         {{#if (and pilotName copilotName)}}<br/>{{/if}}
-  
+
         {{#if flight.copilot.id}}
           <LinkTo @route="user" @model={{flight.copilot.id}}>{{copilotName}}</LinkTo>
         {{else if copilotName}}
           {{copilotName}}
         {{/if}}
-  
+
         {{#if (not (or pilotName copilotName)) }}
           [{{t "unspecified"}}]
         {{/if}}
       </td>
     </tr>
-  
+
     {{#if flight.scoreDate}}
       <tr>
         <th>{{t "date"}}</th>
         <td><LinkTo @route="flights.date" @model={{flight.scoreDate}}>{{format-date flight.scoreDate format="ddmmyyyy" timeZone="UTC"}}</LinkTo></td>
       </tr>
     {{/if}}
-  
+
     {{#if flight.takeoffTime}}
       <tr>
         <th>{{t "takeoff"}}</th>
@@ -55,7 +55,7 @@
         </td>
       </tr>
     {{/if}}
-  
+
     {{#if flight.landingTime}}
       <tr>
         <th>{{t "landing"}}</th>
@@ -73,14 +73,14 @@
         </td>
       </tr>
     {{/if}}
-  
+
     {{#if duration}}
       <tr>
         <th>{{t "duration"}}</th>
         <td>{{t "n-hours" hours num=(format-seconds duration)}}</td>
       </tr>
     {{/if}}
-  
+
     <tr>
       <th>{{t "aircraft"}}</th>
       <td class="column-buttons">
@@ -89,7 +89,7 @@
             {{fa-icon "pencil"}} {{t "change"}}
           </LinkTo>
         {{/if}}
-  
+
         {{#if flight.model}}
           <span><BsTooltip @title={{t "index-INDEX" index=flight.model.index}} />{{flight.model.name}}</span>
         {{else if flight.igcFile.model}}
@@ -97,16 +97,16 @@
         {{else}}
           [{{t "unknown"}}]
         {{/if}}
-  
+
         <br><small>{{registration}} {{#if (and registration competitionId)}}&ndash;{{/if}} {{competitionId}}</small>
       </td>
     </tr>
-  
+
     <tr>
       <th>{{t "score"}}</th>
       <td>
         {{t "POINTS-points-abbr" points=(format-number flight.score minimumFractionDigits=1 maximumFractionDigits=1)}}
-  
+
         <small><br>
           {{#if flight.distance}}
             <span title={{t "olc-distance"}}>
@@ -123,22 +123,22 @@
         </small>
       </td>
     </tr>
-  
-  
+
+
     {{#if flight.speed}}
       <tr>
         <th>{{t "speed"}}</th>
         <td>{{format-speed flight.speed}}</td>
       </tr>
     {{/if}}
-  
+
     {{#if flight.club}}
       <tr>
         <th>{{t "club"}}</th>
         <td><LinkTo @route="club" @model={{flight.club.id}}>{{flight.club.name}}</LinkTo></td>
       </tr>
     {{/if}}
-  
+
     <tr>
       <th>{{t "uploaded"}}</th>
       <td>
@@ -148,7 +148,7 @@
           user=flight.igcFile.owner.name
           userURL=(href-to "user" flight.igcFile.owner.id)}}</td>
     </tr>
-  
+
     {{#if isOwner}}
       <tr>
         <th>{{t "actions"}}</th>
@@ -156,7 +156,7 @@
           <button type="button" class="btn btn-default btn-sm" onclick={{action (mut showDeleteModal) true}}>
             {{fa-icon "remove"}} {{t "delete"}}
           </button>
-  
+
           {{#if isPrivate}}
             <button type="button" class="btn btn-default btn-sm" onclick={{action (mut showPublishModal) true}}>
               {{fa-icon "globe"}} {{t "publish"}}
@@ -167,42 +167,42 @@
     {{/if}}
     </tbody>
   </table>
-  
+
   <p>
     <a href="/files/{{flight.igcFile.filename}}" title={{flight.igcFile.filename}} class="btn btn-default" data-href-to-ignore>
       {{fa-icon "download" size="lg"}} IGC
     </a>
-  
+
     <span title={{t "pin-button-title"}}>
       <PinButton @flightId={{flight.id}} />
     </span>
   </p>
-  
+
   <BsModal @open={{showDeleteModal}} @onSubmit={{perform deleteTask}} @onHide={{action (mut showDeleteModal) false}} as |modal|>
     <modal.header>
       <h4 class="modal-title">{{t "delete-flight"}}</h4>
     </modal.header>
-  
+
     <modal.body>
       <label class="large">{{t "delete-flight-confirmation-text"}}</label>
     </modal.body>
-  
-    <modal.footer as |footer|>
+
+    <modal.footer>
       <BsButton @onClick={{action modal.submit}} @disabled={{deleteTask.isRunning}} @type="primary">{{t "yes"}}</BsButton>
       <BsButton @onClick={{action modal.close}} @disabled={{deleteTask.isRunning}}>{{t "no"}}</BsButton>
     </modal.footer>
   </BsModal>
-  
+
   <BsModal @open={{showPublishModal}} @onSubmit={{perform publishTask}} @onHide={{action (mut showPublishModal) false}} as |modal|>
     <modal.header>
       <h4 class="modal-title">{{t "publish-flight"}}</h4>
     </modal.header>
-  
+
     <modal.body>
       <label class="large">{{t "publish-flight-confirmation-text"}}</label>
     </modal.body>
-  
-    <modal.footer as |footer|>
+
+    <modal.footer>
       <BsButton @onClick={{action modal.submit}} @disabled={{publishTask.isRunning}} @type="primary">{{t "yes"}}</BsButton>
       <BsButton @onClick={{action modal.close}} @disabled={{publishTask.isRunning}}>{{t "no"}}</BsButton>
     </modal.footer>
