--- a/ember/app/templates/components/nav-bar-menu-right.hbs
+++ b/ember/app/templates/components/nav-bar-menu-right.hbs
@@ -35,7 +35,7 @@
       <dd.toggle>
         {{fa-icon "sign-in"}} {{t "login"}} {{fa-icon "caret-down"}}
       </dd.toggle>
-      <dd.menu as |menu|>
+      <dd.menu>
         <LoginForm @inline={{true}} />
       </dd.menu>
     </nav.dropdown>
