template-lint: Enable  rule

--- a/ember/app/templates/components/cesium-button.hbs
+++ b/ember/app/templates/components/cesium-button.hbs
@@ -1,7 +1,7 @@
 <button type="button" class="CesiumSwitcher ol-unselectable" {{on "click" this.toggle}}>
   {{#if enabled}}
-    <img src="../../images/2d.png"/>
+    <img src="../../images/2d.png">
   {{else}}
-    <img src="../../images/3d.png"/>
+    <img src="../../images/3d.png">
   {{/if}}
 </button>
