--- a/ember/app/templates/components/datetime-picker.hbs
+++ b/ember/app/templates/components/datetime-picker.hbs
@@ -1,4 +1,4 @@
 <div class="input-group input-group-sm date" ...attributes {{didInsert this.setup}} {{willDestroy this.teardown}}>
-  <input class="form-control" />
+  <input class="form-control">
   <span class="input-group-addon">{{fa-icon "clock-o"}}</span>
 </div>
