--- a/ember/app/templates/components/layer-switcher.hbs
+++ b/ember/app/templates/components/layer-switcher.hbs
@@ -14,8 +14,8 @@
     </div>
   {{else}}
     <div id="GraphicLayerSwitcher-closed">
-      <button {{action "open"}}><img src="../../images/layers.png"/></button>
+      <button {{action "open"}}><img src="../../images/layers.png"></button>
     </div>
   {{/if}}
-  
+
 </div>
