--- a/ember/app/templates/components/playback-button.hbs
+++ b/ember/app/templates/components/playback-button.hbs
@@ -1,7 +1,7 @@
 <button type="button" class="PlayButton ol-unselectable" ...attributes {{on "click" @onToggle}}>
   {{#if @isRunning}}
-    <img src="../../images/stop.png"/>
+    <img src="../../images/stop.png">
   {{else}}
-    <img src="../../images/play.png"/>
+    <img src="../../images/play.png">
   {{/if}}
 </button>
