--- a/ember/app/templates/components/upload-result-form.hbs
+++ b/ember/app/templates/components/upload-result-form.hbs
@@ -1,6 +1,6 @@
 <div class="row" ...attributes>
-  <input type="hidden" name="{{prefix}}-status" value={{status.value}} />
-  <input type="hidden" name="{{prefix}}-name" value={{name}} />
+  <input type="hidden" name="{{prefix}}-status" value={{status.value}}>
+  <input type="hidden" name="{{prefix}}-name" value={{name}}>
 
   {{#if success}}
     <div class="form-group col-sm-6">
