--- a/ember/app/templates/index.hbs
+++ b/ember/app/templates/index.hbs
@@ -14,10 +14,10 @@
 
     <div class="row">
       <div class="col-xs-12 banner">
-        <div class="col-xs-3"><LinkTo @route="flight" @model={{17613}} @query={{hash baselayer="Google Physical" overlays="Airspace"}}><img src="/images/about-1.jpeg" class="img-responsive"/></LinkTo></div>
-        <div class="col-xs-3"><LinkTo @route="flight" @model={{17537}} @query={{hash baselayer="Empty" overlays="Airspace"}}><img src="/images/about-2.jpeg" class="img-responsive"/></LinkTo></div>
-        <div class="col-xs-3"><LinkTo @route="flight" @model={{17567}} @query={{hash baselayer="OpenStreetMap" overlays="Airspace"}}><img src="/images/about-3.jpeg" class="img-responsive"/></LinkTo></div>
-        <div class="col-xs-3"><LinkTo @route="flight" @model={{17577}} @query={{hash baselayer="Shaded Relief" overlays="Airspace"}}><img src="/images/about-4.jpeg" class="img-responsive"/></LinkTo></div>
+        <div class="col-xs-3"><LinkTo @route="flight" @model={{17613}} @query={{hash baselayer="Google Physical" overlays="Airspace"}}><img src="/images/about-1.jpeg" class="img-responsive"></LinkTo></div>
+        <div class="col-xs-3"><LinkTo @route="flight" @model={{17537}} @query={{hash baselayer="Empty" overlays="Airspace"}}><img src="/images/about-2.jpeg" class="img-responsive"></LinkTo></div>
+        <div class="col-xs-3"><LinkTo @route="flight" @model={{17567}} @query={{hash baselayer="OpenStreetMap" overlays="Airspace"}}><img src="/images/about-3.jpeg" class="img-responsive"></LinkTo></div>
+        <div class="col-xs-3"><LinkTo @route="flight" @model={{17577}} @query={{hash baselayer="Shaded Relief" overlays="Airspace"}}><img src="/images/about-4.jpeg" class="img-responsive"></LinkTo></div>
       </div>
     </div>
 
