--- a/ember/app/templates/components/circling-performance-row.hbs
+++ b/ember/app/templates/components/circling-performance-row.hbs
@@ -1,11 +1,11 @@
 <tr ...attributes>
   <th>{{t (concat "circling-direction." perf.circlingDirection)}}</th>
   <td class="numeric">
-    {{perf.count}}<br/>
+    {{perf.count}}<br>
     {{format-lift perf.vario}}
   </td>
   <td class="numeric">
-    <abbr title={{format-number perf.fraction maximumFractionDigits=1}}>{{format-seconds perf.duration}}</abbr><br/>
+    <abbr title={{format-number perf.fraction maximumFractionDigits=1}}>{{format-seconds perf.duration}}</abbr><br>
     {{format-altitude perf.altDiff}}
   </td>
 
