--- a/ember/app/templates/components/comments-list.hbs
+++ b/ember/app/templates/components/comments-list.hbs
@@ -22,8 +22,8 @@
       <tr>
         <td>
           <form {{action (perform addCommentTask) on="submit"}}>
-            <Textarea @value={{addCommentText}} class="form-control" @disabled={{addCommentTask.isRunning}} /><br/>
-            <input type="submit" value={{t "add-comment"}} class="btn btn-primary" disabled={{addCommentTask.isRunning}}/>
+            <Textarea @value={{addCommentText}} class="form-control" @disabled={{addCommentTask.isRunning}} /><br>
+            <input type="submit" value={{t "add-comment"}} class="btn btn-primary" disabled={{addCommentTask.isRunning}}>
           </form>
         </td>
       </tr>
