--- a/ember/app/templates/tracking/info.hbs
+++ b/ember/app/templates/tracking/info.hbs
@@ -11,18 +11,18 @@
       <h3>{{t "tracking.clients"}}</h3>
       <ul>
         <li>
-          <b>XCSoar:</b><br/>
+          <b>XCSoar:</b><br>
           {{t "tracking.xcsoar-description" htmlSafe=true release=(html-safe "<a href=\"http://www.xcsoar.org/download/latest.html\">XCSoar 6.4</a>")}}
           (<a href="https://play.google.com/store/apps/details?id=org.xcsoar" target="_blank" rel="noopener">Google Play</a>).
           {{t "tracking.instructions-below"}}
         </li>
         <li>
-          <b>Gaggle:</b><br/>
+          <b>Gaggle:</b><br>
           {{t "tracking.available-in-gaggle"}}
           (<a href="https://play.google.com/store/apps/details?id=com.geeksville.gaggle" target="_blank" rel="noopener">Google Play</a>)
         </li>
         <li>
-          <b>{{t "tracking.lt24-clients"}}:</b><br/>
+          <b>{{t "tracking.lt24-clients"}}:</b><br>
           {{t "tracking.lt24-description" htmlSafe=true livetrack24=(html-safe "<a href=\"http://www.livetrack24.com/docs/wiki/LiveTracking%20API\">LiveTrack24</a>") skylines=(html-safe "<code>skylines.aero</code>")}}
         </li>
       </ul>
