Use kebab-case for modifier invocations

--- a/ember/app/templates/components/date-picker.hbs
+++ b/ember/app/templates/components/date-picker.hbs
@@ -1,6 +1,6 @@
 <span
   data-date={{date}}
   data-date-format="yyyy-mm-dd"
-  {{didInsert this.setup}}
-  {{willDestroy this.teardown}}
+  {{did-insert this.setup}}
+  {{will-destroy this.teardown}}
 >{{yield}}</span>
