--- a/ember/app/templates/components/flight-page.hbs
+++ b/ember/app/templates/components/flight-page.hbs
@@ -1,4 +1,4 @@
-<div class="relative-fullscreen" ...attributes {{didInsert this.setup}}>
+<div class="relative-fullscreen" ...attributes {{did-insert this.setup}}>
   <div id="sidebar" class="sidebar collapsed">
     {{! Nav tabs }}
     <ul class="sidebar-tabs" role="tablist">
