--- a/ember/app/templates/components/datetime-picker.hbs
+++ b/ember/app/templates/components/datetime-picker.hbs
@@ -1,4 +1,4 @@
-<div class="input-group input-group-sm date" ...attributes {{didInsert this.setup}} {{willDestroy this.teardown}}>
+<div class="input-group input-group-sm date" ...attributes {{did-insert this.setup}} {{will-destroy this.teardown}}>
   <input class="form-control">
   <span class="input-group-addon">{{fa-icon "clock-o"}}</span>
 </div>
