Use kebab-case for  modifier invocations

--- a/ember/app/templates/components/flight-map.hbs
+++ b/ember/app/templates/components/flight-map.hbs
@@ -1,4 +1,4 @@
-<div class="relative-fullscreen" ...attributes {{setMapTarget this.map}}>
+<div class="relative-fullscreen" ...attributes {{set-map-target this.map}}>
   <LayerSwitcher @map={{map}} />
 
   {{#if flights}}
