--- a/ember/app/styles/app.scss
+++ b/ember/app/styles/app.scss
@@ -11,6 +11,7 @@
 @import 'components/login-form';
 @import 'components/map-click-handler';
 @import 'components/playback-button';
+@import 'components/progress-bar';
 @import 'components/search-results-table';
 @import 'components/tracking-table';
 @import 'components/wingman-table';
@@ -21,6 +22,5 @@
 @import 'events';
 @import 'ol3-sidebar';
 @import 'flags';
-@import 'loading-indicator';
 @import 'footer';
 @import 'map';
