--- a/ember/app/styles/components/progress-bar.scss
+++ b/ember/app/styles/components/progress-bar.scss
@@ -1,10 +1,15 @@
-.pace .pace-progress {
+.custom-progress-bar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 2px;
   background: lighten($skylines-blue, 0%);
   border-bottom: solid 1px lighten($skylines-blue, 10%);
   box-shadow: 0 0 5px 0 lighten($skylines-blue, 20%);
+  z-index: 3000;
 }
 
-.ember-application .pace .pace-progress {
+.ember-application .custom-progress-bar {
   top: 40px;
 
   @media (max-width: 767px) {
