FlightPage: Unwrap  before handing  to

--- a/ember/app/templates/components/flight-page.hbs
+++ b/ember/app/templates/components/flight-page.hbs
@@ -116,7 +116,7 @@
     </div>
 
     <FlightBarogram
-      @flights={{fixCalc.flights}}
+      @flights={{fixCalc.flights.content}}
       @selection={{selectedFlightId}}
       @hoverMode={{not fixCalc.isRunning}}
       @timeInterval={{timeInterval}}
