TrackingPage: Unwrap  before handing  to

--- a/ember/app/templates/components/tracking-page.hbs
+++ b/ember/app/templates/components/tracking-page.hbs
@@ -47,7 +47,7 @@
       </div>
 
       <FlightBarogram
-        @flights={{fixCalc.flights}}
+        @flights={{fixCalc.flights.content}}
         @selection={{selectedFlightId}}
         @hoverMode={{not fixCalc.isRunning}}
         @timeInterval={{timeInterval}}
