TrackingTable: Convert to template-only component

--- a/ember/app/templates/components/tracking-table.hbs
+++ b/ember/app/templates/components/tracking-table.hbs
@@ -10,7 +10,7 @@
   </thead>
 
   <tbody>
-  {{#each tracks as |track|}}
+  {{#each @tracks as |track|}}
     <TrackingTableRow @track={{track}} />
   {{/each}}
   </tbody>
