--- a/ember/app/templates/components/plane-label-overlays.hbs
+++ b/ember/app/templates/components/plane-label-overlays.hbs
@@ -1,5 +1,5 @@
-{{#each fixes as |fix|}}
+{{#each @fixes as |fix|}}
   {{#if fix.coordinate}}
-    <PlaneLabelOverlay @map={{map}} @flight={{fix.flight}} @position={{fix.coordinate}} />
+    <PlaneLabelOverlay @map={{@map}} @flight={{fix.flight}} @position={{fix.coordinate}} />
   {{/if}}
 {{/each}}
